# sticky

./: AGENTS.md  IMPLEMENTATION_PLAN.md  PROJECT_REFERENCE.md  README.md  from_scratch_build_guide.md  index.html  package-lock.json  package.json  plan.md  todo_add.py  todo_monitor.py
src/: main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  _test_server.py  tauri.conf.json  todo_context_server.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs
src/components/: AddButtonWindow.tsx  NoteWindow.tsx  PreferencesWindow.tsx  ReminderWindow.tsx  TodoPopupWindow.tsx
src/styles/: global.css  note.css  reminder.css  todo-popup.css
src/utils/: spawnWindow.ts  store.ts
