[package]
name = "sticky-notes"
version = "0.1.0"
description = "A Sticky Notes App"
authors = ["you"]
edition = "2021"

[lib]
name = "sticky_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "2.4.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-global-shortcut = "2.3.2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
